# de_hands_on_1

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  variables.env
library_api/: main.py
library_api/api/: api.py  dependencies.py
library_api/api/routers/: authors.py  books.py  genres.py
library_api/api/schemata/: author.py  book.py  genre.py
library_api/db/: session.py
library_api/db/models/: author.py  book.py  genre.py
tests/: pytest.ini  test_library_api.py
tests/api/routers/: test_author.py  test_book.py  test_genre.py  utils.py
